@@ -83,7 +83,7 @@ public class BindTransmitter extends AbstractPdu {
     }
 
     @Override
-    protected ByteBuffer body() throws PduException {
+    protected ByteBuffer body() {
         ByteBuffer bb = new ByteBuffer();
         bb.appendCString(systemId);
         bb.appendCString(password);
