@@ -152,7 +152,7 @@ public class DeliverSm extends AbstractPdu {
     }
 
     @Override
-    protected ByteBuffer body() throws PduException {
+    protected ByteBuffer body() {
         ByteBuffer bb = new ByteBuffer();
         bb.appendCString(serviceType);
         bb.appendByte(sourceAddrTon);
