@@ -27,7 +27,7 @@ public class GenericNack extends AbstractPdu {
     }
 
     @Override
-    protected ByteBuffer body() throws PduException {
+    protected ByteBuffer body() {
         return null;
     }
 }
